RESOLVED FIXED57474
Crash when NPN_Evaluate removes the plug-in frame
https://bugs.webkit.org/show_bug.cgi?id=57474
Summary Crash when NPN_Evaluate removes the plug-in frame
Anders Carlsson
Reported 2011-03-30 10:29:33 PDT
Crash when NPN_Evaluate removes the plug-in frame
Attachments
Patch (2.06 KB, patch)
2011-03-30 10:31 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-30 10:31:04 PDT
Anders Carlsson
Comment 2 2011-03-30 10:39:05 PDT
Note You need to log in before you can comment on or make changes to this bug.